new project add

--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
                                     alt="node js"
                                     width="55"
                                 />
-                                <h3 class="mb-3 mt-0 text-light">Node js</h3>
+                                <h3 class="mb-3 mt-0 text-light">Node.js</h3>
                             </div>
                         </div>
 
@@ -456,10 +456,9 @@
                                         Dynamice shopping Cart
                                     </h3>
                                 </div>
-
                                 <div class="row">
                                     <span class="badge bg-success"
-                                        >Reactjs</span
+                                        >React.js</span
                                     >
                                     <span class="badge bg-info ml-2"
                                         >Redux</span
@@ -508,20 +507,79 @@
                                     </a>
                                 </div>
                             </li>
+                            <!-- project end -->
 
+                            <li class="list-group-item list-group-item">
+                                <div class="row">
+                                    <h3>Library management API</h3>
+                                </div>
+                                <div class="row">
+                                    <span class="badge bg-success"
+                                        >Node.js</span
+                                    >
+                                    <span class="badge bg-info ml-2"
+                                        >Express.js</span
+                                    >
+                                    <span
+                                        class="badge bg-warning text-dark ml-2"
+                                        >MongoDB</span
+                                    >
+                                </div>
+                                <br />
+                                <div class="row">
+                                    <a
+                                        href="https://github.com/nayeem01/library-management-api"
+                                    >
+                                        <img
+                                            src="./asset/maxresdefault.png"
+                                            class="img-thumbnail"
+                                            alt="..."
+                                            width="800"
+                                        />
+                                    </a>
+                                </div>
+                                <br />
+                                <div class="container">
+                                    <a
+                                        href="https://github.com/nayeem01/library-management-api"
+                                        target="_blank"
+                                    >
+                                        <button
+                                            type="button"
+                                            class="btn btn-warning sm-2"
+                                        >
+                                            Source Code
+                                        </button>
+                                    </a>
+                                    <a
+                                        href="https://documenter.getpostman.com/view/13354304/TVt184bX"
+                                        target="_blank"
+                                    >
+                                        <button
+                                            type="button"
+                                            class="btn btn-info ml-3"
+                                        >
+                                            Documentation
+                                        </button>
+                                    </a>
+                                </div>
+                            </li>
+                            <!-- project end -->
                             <li class="list-group-item list-group-item">
                                 <div class="row">
                                     <h3>Blogging API</h3>
                                 </div>
 
                                 <div class="row">
-                                    <span class="badge bg-success">Nodejs</span>
+                                    <span class="badge bg-success"
+                                        >Node.js</span
+                                    >
                                     <span class="badge bg-primary ml-2"
-                                        >Expressjs</span
+                                        >Express.js</span
                                     >
                                     <span
                                         class="badge bg-warning text-dark ml-2"
-                                        >Mongodb</span
+                                        >MongoDB</span
                                     >
                                 </div>
                                 <br />
@@ -570,13 +628,15 @@
                                 </div>
 
                                 <div class="row">
-                                    <span class="badge bg-success">Nodejs</span>
+                                    <span class="badge bg-success"
+                                        >Node.js</span
+                                    >
                                     <span class="badge bg-primary ml-2"
-                                        >Expressjs</span
+                                        >Express.js</span
                                     >
                                     <span
                                         class="badge bg-warning text-dark ml-2"
-                                        >Mongodb</span
+                                        >MongoDB</span
                                     >
                                 </div>
                                 <br />
